runtime/gen/basis-ffi.sml

val SC_THREAD_PRIO_PROTECT = _const "Posix_ProcEnv_SC_THREAD_PRIO_PROTECT" : C_Int.t;
val SC_THREAD_PRIORITY_SCHEDULING = _const "Posix_ProcEnv_SC_THREAD_PRIORITY_SCHEDULING" : C_Int.t;
val SC_THREAD_PROCESS_SHARED = _const "Posix_ProcEnv_SC_THREAD_PROCESS_SHARED" : C_Int.t;
val SC_THREAD_SAFE_FUNCTIONS = _const "Posix_ProcEnv_SC_THREAD_SAFE_FUNCTIONS" : C_Int.t;
val SC_THREAD_SPORADIC_SERVER = _const "Posix_ProcEnv_SC_THREAD_SPORADIC_SERVER" : C_Int.t;
val SC_THREAD_STACK_MIN = _const "Posix_ProcEnv_SC_THREAD_STACK_MIN" : C_Int.t;
val SC_THREAD_THREADS_MAX = _const "Posix_ProcEnv_SC_THREAD_THREADS_MAX" : C_Int.t;
val SC_THREADS = _const "Posix_ProcEnv_SC_THREADS" : C_Int.t;
val SC_TIMEOUTS = _const "Posix_ProcEnv_SC_TIMEOUTS" : C_Int.t;
val SC_TIMER_MAX = _const "Posix_ProcEnv_SC_TIMER_MAX" : C_Int.t;
val SC_TIMERS = _const "Posix_ProcEnv_SC_TIMERS" : C_Int.t;
val SC_TRACE = _const "Posix_ProcEnv_SC_TRACE" : C_Int.t;
val SC_TRACE_EVENT_FILTER = _const "Posix_ProcEnv_SC_TRACE_EVENT_FILTER" : C_Int.t;
val SC_TRACE_EVENT_NAME_MAX = _const "Posix_ProcEnv_SC_TRACE_EVENT_NAME_MAX" : C_Int.t;
val SC_TRACE_INHERIT = _const "Posix_ProcEnv_SC_TRACE_INHERIT" : C_Int.t;
val SC_TRACE_LOG = _const "Posix_ProcEnv_SC_TRACE_LOG" : C_Int.t;
val SC_TRACE_NAME_MAX = _const "Posix_ProcEnv_SC_TRACE_NAME_MAX" : C_Int.t;
val SC_TRACE_SYS_MAX = _const "Posix_ProcEnv_SC_TRACE_SYS_MAX" : C_Int.t;
val SC_TRACE_USER_EVENT_MAX = _const "Posix_ProcEnv_SC_TRACE_USER_EVENT_MAX" : C_Int.t;
val SC_TTY_NAME_MAX = _const "Posix_ProcEnv_SC_TTY_NAME_MAX" : C_Int.t;
val SC_TYPED_MEMORY_OBJECTS = _const "Posix_ProcEnv_SC_TYPED_MEMORY_OBJECTS" : C_Int.t;
val SC_TZNAME_MAX = _const "Posix_ProcEnv_SC_TZNAME_MAX" : C_Int.t;
val SC_V6_ILP32_OFF32 = _const "Posix_ProcEnv_SC_V6_ILP32_OFF32" : C_Int.t;
val SC_V6_ILP32_OFFBIG = _const "Posix_ProcEnv_SC_V6_ILP32_OFFBIG" : C_Int.t;
val SC_V6_LP64_OFF64 = _const "Posix_ProcEnv_SC_V6_LP64_OFF64" : C_Int.t;
val SC_V6_LPBIG_OFFBIG = _const "Posix_ProcEnv_SC_V6_LPBIG_OFFBIG" : C_Int.t;
val SC_VERSION = _const "Posix_ProcEnv_SC_VERSION" : C_Int.t;
val SC_XBS5_ILP32_OFF32 = _const "Posix_ProcEnv_SC_XBS5_ILP32_OFF32" : C_Int.t;
val SC_XBS5_ILP32_OFFBIG = _const "Posix_ProcEnv_SC_XBS5_ILP32_OFFBIG" : C_Int.t;
val SC_XBS5_LP64_OFF64 = _const "Posix_ProcEnv_SC_XBS5_LP64_OFF64" : C_Int.t;
val SC_XBS5_LPBIG_OFFBIG = _const "Posix_ProcEnv_SC_XBS5_LPBIG_OFFBIG" : C_Int.t;
val SC_XOPEN_CRYPT = _const "Posix_ProcEnv_SC_XOPEN_CRYPT" : C_Int.t;
val SC_XOPEN_ENH_I18N = _const "Posix_ProcEnv_SC_XOPEN_ENH_I18N" : C_Int.t;
val SC_XOPEN_LEGACY = _const "Posix_ProcEnv_SC_XOPEN_LEGACY" : C_Int.t;
val SC_XOPEN_REALTIME = _const "Posix_ProcEnv_SC_XOPEN_REALTIME" : C_Int.t;
val SC_XOPEN_REALTIME_THREADS = _const "Posix_ProcEnv_SC_XOPEN_REALTIME_THREADS" : C_Int.t;
val SC_XOPEN_SHM = _const "Posix_ProcEnv_SC_XOPEN_SHM" : C_Int.t;
val SC_XOPEN_STREAMS = _const "Posix_ProcEnv_SC_XOPEN_STREAMS" : C_Int.t;
val SC_XOPEN_UNIX = _const "Posix_ProcEnv_SC_XOPEN_UNIX" : C_Int.t;
val SC_XOPEN_VERSION = _const "Posix_ProcEnv_SC_XOPEN_VERSION" : C_Int.t;
val setenv = _import "Posix_ProcEnv_setenv" private : NullString8.t * NullString8.t -> (C_Int.t) C_Errno.t;
val setgid = _import "Posix_ProcEnv_setgid" private : C_GId.t -> (C_Int.t) C_Errno.t;
val setgroups = _import "Posix_ProcEnv_setgroups" private : C_Int.t * (C_GId.t) vector -> (C_Int.t) C_Errno.t;
val setpgid = _import "Posix_ProcEnv_setpgid" private : C_PId.t * C_PId.t -> (C_Int.t) C_Errno.t;
val setsid = _import "Posix_ProcEnv_setsid" private : unit -> (C_PId.t) C_Errno.t;
val setuid = _import "Posix_ProcEnv_setuid" private : C_UId.t -> (C_Int.t) C_Errno.t;
val sysconf = _import "Posix_ProcEnv_sysconf" private : C_Int.t -> (C_Long.t) C_Errno.t;
val times = _import "Posix_ProcEnv_times" private : unit -> (C_Clock.t) C_Errno.t;
structure Times = 
struct
val getCSTime = _import "Posix_ProcEnv_Times_getCSTime" private : unit -> C_Clock.t;
val getCUTime = _import "Posix_ProcEnv_Times_getCUTime" private : unit -> C_Clock.t;
val getSTime = _import "Posix_ProcEnv_Times_getSTime" private : unit -> C_Clock.t;
val getUTime = _import "Posix_ProcEnv_Times_getUTime" private : unit -> C_Clock.t;
end
val ttyname = _import "Posix_ProcEnv_ttyname" private : C_Fd.t -> (C_String.t) C_Errno.t;
val uname = _import "Posix_ProcEnv_uname" private : unit -> (C_Int.t) C_Errno.t;
structure Uname = 
struct
val getMachine = _import "Posix_ProcEnv_Uname_getMachine" private : unit -> C_String.t;
val getNodeName = _import "Posix_ProcEnv_Uname_getNodeName" private : unit -> C_String.t;
val getRelease = _import "Posix_ProcEnv_Uname_getRelease" private : unit -> C_String.t;
val getSysName = _import "Posix_ProcEnv_Uname_getSysName" private : unit -> C_String.t;
val getVersion = _import "Posix_ProcEnv_Uname_getVersion" private : unit -> C_String.t;
end
end
structure Process = 
struct
val alarm = _import "Posix_Process_alarm" private : C_UInt.t -> C_UInt.t;
val exece = _import "Posix_Process_exece" private : NullString8.t * (NullString8.t) array * (NullString8.t) array -> (C_Int.t) C_Errno.t;
val execp = _import "Posix_Process_execp" private : NullString8.t * (NullString8.t) array -> (C_Int.t) C_Errno.t;
val exit = _import "Posix_Process_exit" private : C_Status.t -> unit;
val exitStatus = _import "Posix_Process_exitStatus" private : C_Status.t -> C_Int.t;
val fork = _import "Posix_Process_fork" private : unit -> (C_PId.t) C_Errno.t;
val ifExited = _import "Posix_Process_ifExited" private : C_Status.t -> C_Int.t;
val ifSignaled = _import "Posix_Process_ifSignaled" private : C_Status.t -> C_Int.t;
val ifStopped = _import "Posix_Process_ifStopped" private : C_Status.t -> C_Int.t;
val kill = _import "Posix_Process_kill" private : C_PId.t * C_Signal.t -> (C_Int.t) C_Errno.t;
val nanosleep = _import "Posix_Process_nanosleep" private : (C_Time.t) ref * (C_Long.t) ref -> (C_Int.t) C_Errno.t;
val pause = _import "Posix_Process_pause" private : unit -> (C_Int.t) C_Errno.t;
val sleep = _import "Posix_Process_sleep" private : C_UInt.t -> C_UInt.t;
val stopSig = _import "Posix_Process_stopSig" private : C_Status.t -> C_Signal.t;
val system = _import "Posix_Process_system" private : NullString8.t -> (C_Status.t) C_Errno.t;
val termSig = _import "Posix_Process_termSig" private : C_Status.t -> C_Signal.t;
structure W = 
struct
val NOHANG = _const "Posix_Process_W_NOHANG" : C_Int.t;
val UNTRACED = _const "Posix_Process_W_UNTRACED" : C_Int.t;
end
val waitpid = _import "Posix_Process_waitpid" private : C_PId.t * (C_Status.t) ref * C_Int.t -> (C_PId.t) C_Errno.t;
end
structure Signal = 
struct
val default = _import "Posix_Signal_default" private : C_Signal.t -> (C_Int.t) C_Errno.t;
val handlee = _import "Posix_Signal_handlee" private : C_Signal.t -> (C_Int.t) C_Errno.t;
val handleGC = _import "Posix_Signal_handleGC" private : unit -> unit;
val ignore = _import "Posix_Signal_ignore" private : C_Signal.t -> (C_Int.t) C_Errno.t;
val isDefault = _import "Posix_Signal_isDefault" private : C_Signal.t * (C_Int.t) ref -> (C_Int.t) C_Errno.t;
val isIgnore = _import "Posix_Signal_isIgnore" private : C_Signal.t * (C_Int.t) ref -> (C_Int.t) C_Errno.t;
val isPending = _import "Posix_Signal_isPending" private : C_Signal.t -> C_Int.t;
val isPendingGC = _import "Posix_Signal_isPendingGC" private : unit -> C_Int.t;
val NSIG = _const "Posix_Signal_NSIG" : C_Int.t;
val resetPending = _import "Posix_Signal_resetPending" private : unit -> unit;
val SIG_BLOCK = _const "Posix_Signal_SIG_BLOCK" : C_Int.t;
val SIG_SETMASK = _const "Posix_Signal_SIG_SETMASK" : C_Int.t;
val SIG_UNBLOCK = _const "Posix_Signal_SIG_UNBLOCK" : C_Int.t;
val SIGABRT = _const "Posix_Signal_SIGABRT" : C_Signal.t;
val sigaddset = _import "Posix_Signal_sigaddset" private : C_Signal.t -> (C_Int.t) C_Errno.t;
val SIGALRM = _const "Posix_Signal_SIGALRM" : C_Signal.t;
val SIGBUS = _const "Posix_Signal_SIGBUS" : C_Signal.t;
val SIGCHLD = _const "Posix_Signal_SIGCHLD" : C_Signal.t;
val SIGCONT = _const "Posix_Signal_SIGCONT" : C_Signal.t;
val sigdelset = _import "Posix_Signal_sigdelset" private : C_Signal.t -> (C_Int.t) C_Errno.t;
val sigemptyset = _import "Posix_Signal_sigemptyset" private : unit -> (C_Int.t) C_Errno.t;
val sigfillset = _import "Posix_Signal_sigfillset" private : unit -> (C_Int.t) C_Errno.t;
val SIGFPE = _const "Posix_Signal_SIGFPE" : C_Signal.t;
val SIGHUP = _const "Posix_Signal_SIGHUP" : C_Signal.t;
val SIGILL = _const "Posix_Signal_SIGILL" : C_Signal.t;
val SIGINT = _const "Posix_Signal_SIGINT" : C_Signal.t;
val sigismember = _import "Posix_Signal_sigismember" private : C_Signal.t -> (C_Int.t) C_Errno.t;
val SIGKILL = _const "Posix_Signal_SIGKILL" : C_Signal.t;
val SIGPIPE = _const "Posix_Signal_SIGPIPE" : C_Signal.t;
val SIGPOLL = _const "Posix_Signal_SIGPOLL" : C_Signal.t;
val sigprocmask = _import "Posix_Signal_sigprocmask" private : C_Int.t -> (C_Int.t) C_Errno.t;
val SIGPROF = _const "Posix_Signal_SIGPROF" : C_Signal.t;
val SIGQUIT = _const "Posix_Signal_SIGQUIT" : C_Signal.t;
val SIGSEGV = _const "Posix_Signal_SIGSEGV" : C_Signal.t;
val SIGSTOP = _const "Posix_Signal_SIGSTOP" : C_Signal.t;
val sigsuspend = _import "Posix_Signal_sigsuspend" private : unit -> unit;
val SIGSYS = _const "Posix_Signal_SIGSYS" : C_Signal.t;
val SIGTERM = _const "Posix_Signal_SIGTERM" : C_Signal.t;
val SIGTRAP = _const "Posix_Signal_SIGTRAP" : C_Signal.t;
val SIGTSTP = _const "Posix_Signal_SIGTSTP" : C_Signal.t;
val SIGTTIN = _const "Posix_Signal_SIGTTIN" : C_Signal.t;
val SIGTTOU = _const "Posix_Signal_SIGTTOU" : C_Signal.t;
val SIGURG = _const "Posix_Signal_SIGURG" : C_Signal.t;
val SIGUSR1 = _const "Posix_Signal_SIGUSR1" : C_Signal.t;
val SIGUSR2 = _const "Posix_Signal_SIGUSR2" : C_Signal.t;
val SIGVTALRM = _const "Posix_Signal_SIGVTALRM" : C_Signal.t;
val SIGXCPU = _const "Posix_Signal_SIGXCPU" : C_Signal.t;
val SIGXFSZ = _const "Posix_Signal_SIGXFSZ" : C_Signal.t;
end
structure SysDB = 
struct
val getgrgid = _import "Posix_SysDB_getgrgid" private : C_GId.t -> (C_Int.t) C_Errno.t;
val getgrnam = _import "Posix_SysDB_getgrnam" private : NullString8.t -> (C_Int.t) C_Errno.t;
val getpwnam = _import "Posix_SysDB_getpwnam" private : NullString8.t -> (C_Int.t) C_Errno.t;
val getpwuid = _import "Posix_SysDB_getpwuid" private : C_GId.t -> (C_Int.t) C_Errno.t;
structure Group = 
struct
val getGId = _import "Posix_SysDB_Group_getGId" private : unit -> C_GId.t;
val getMem = _import "Posix_SysDB_Group_getMem" private : unit -> C_StringArray.t;
val getName = _import "Posix_SysDB_Group_getName" private : unit -> C_String.t;
end
structure Passwd = 
struct
val getDir = _import "Posix_SysDB_Passwd_getDir" private : unit -> C_String.t;
val getGId = _import "Posix_SysDB_Passwd_getGId" private : unit -> C_GId.t;
val getName = _import "Posix_SysDB_Passwd_getName" private : unit -> C_String.t;
val getShell = _import "Posix_SysDB_Passwd_getShell" private : unit -> C_String.t;
val getUId = _import "Posix_SysDB_Passwd_getUId" private : unit -> C_UId.t;
end
end
structure TTY = 
struct
val B0 = _const "Posix_TTY_B0" : C_Speed.t;
val B110 = _const "Posix_TTY_B110" : C_Speed.t;
val B1200 = _const "Posix_TTY_B1200" : C_Speed.t;
val B134 = _const "Posix_TTY_B134" : C_Speed.t;
val B150 = _const "Posix_TTY_B150" : C_Speed.t;
val B1800 = _const "Posix_TTY_B1800" : C_Speed.t;
val B19200 = _const "Posix_TTY_B19200" : C_Speed.t;
val B200 = _const "Posix_TTY_B200" : C_Speed.t;
val B2400 = _const "Posix_TTY_B2400" : C_Speed.t;
val B300 = _const "Posix_TTY_B300" : C_Speed.t;
val B38400 = _const "Posix_TTY_B38400" : C_Speed.t;
val B4800 = _const "Posix_TTY_B4800" : C_Speed.t;
val B50 = _const "Posix_TTY_B50" : C_Speed.t;
val B600 = _const "Posix_TTY_B600" : C_Speed.t;
val B75 = _const "Posix_TTY_B75" : C_Speed.t;
val B9600 = _const "Posix_TTY_B9600" : C_Speed.t;
structure C = 
struct
val CLOCAL = _const "Posix_TTY_C_CLOCAL" : C_TCFlag.t;
val CREAD = _const "Posix_TTY_C_CREAD" : C_TCFlag.t;
val CS5 = _const "Posix_TTY_C_CS5" : C_TCFlag.t;
val CS6 = _const "Posix_TTY_C_CS6" : C_TCFlag.t;
